--- a/assets/styles/sass/pages/product.scss
+++ b/assets/styles/sass/pages/product.scss
@@ -171,7 +171,9 @@
   .fashion {
     background-color: #f8fafd;
     margin-bottom: 2rem;
-    padding: 2rem;
+    @include pc-only {
+      padding: 2rem;
+    }
 
     .fashion-block {
       display: flex;
@@ -179,12 +181,13 @@
     }
 
     .fashion-block__img-container {
-      padding: 1rem;
       @include sp-only {
         flex: 0 1 100%;
+        padding-bottom: 1rem;
       }
       @include pc-only {
         flex: 0 1 50%;
+        padding: 1rem;
       }
     }
 
